--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,8 @@ matrix:
             - clang-4.0
             - cmake3
       env:
+        #- ASAN_OPTIONS=detect_leaks=0
+        - LSAN_OPTIONS=verbosity=1:log_threads=1
         - C_COMPILER=clang-4.0
 
     - os: osx
