--- a/.travis.yml
+++ b/.travis.yml
@@ -30,17 +30,9 @@ matrix:
     - os: linux
       compiler: clang
       dist: trusty
-      addons:
-        apt:
-          sources:
-            - llvm-toolchain-trusty-4.0
-          packages:
-            - clang-4.0
-            - cmake3
       env:
-        #- ASAN_OPTIONS=detect_leaks=0
-        - LSAN_OPTIONS=verbosity=1:log_threads=1
-        - C_COMPILER=clang-4.0
+        - ASAN_OPTIONS=detect_leaks=0
+        - C_COMPILER=clang
 
     - os: osx
       compiler: clang
