--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,9 @@ matrix:
         - ASAN_OPTIONS=detect_leaks=0
         - C_COMPILER=clang
 
-    - os: osx
-      compiler: clang
-      osx_image: xcode9
+#    - os: osx
+#      compiler: clang
+#      osx_image: xcode9
 
 before_script:
   - mkdir cmake-build-debug
