--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,19 @@ matrix:
         - ASAN_OPTIONS=detect_leaks=0
         - C_COMPILER=clang
 
+    - os: linux
+      compiler: gcc
+      dist: trusty
+      addons:
+        apt:
+          packages:
+            - gcc-arm-linux-gnueabihf
+            - libc6-dev-armhf-cross
+            - qemu-user
+      env:
+        - CMAKE_EXTRA="-DCMAKE_TOOLCHAIN_FILE=arm.cmake"
+        - RUN_WRAP=qemu-arm
+
 #    - os: osx
 #      compiler: clang
 #      osx_image: xcode9
@@ -41,9 +54,9 @@ matrix:
 before_script:
   - mkdir cmake-build-debug
   - cd cmake-build-debug
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=$C_COMPILER
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=$C_COMPILER $CMAKE_EXTRA
 
 script:
-  - make
+  - make VERBOSE=1
   - cd ..
-  - ./cmake-build-debug/sb_test
+  - $RUN_WRAP ./cmake-build-debug/sb_test
